django-hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-hello-world
  template:
    metadata:
      labels:
        app: django-hello-world
    spec:
      containers:
      - name: django-hello-world
        image: registry.rev.ng/jackv/django-hello-world:master
