django-hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-hello-world-service
spec:
  selector:
    app: django-hello-world
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
