django-hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-hello-world-ingress
  labels:
    role: ingress
spec:
  rules:
  - host: hello-world.example.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-hello-world-service
            port:
              number: 80
